Remove auto-expand behavior, add manual Next buttons
- Remove automatic section expansion after calculations
- Remove auto-expand when entering workloads
- Add 'Continue to Next Calculator' buttons in each breakdown
- Buttons slide right on hover for directional feedback
- User now has full control over navigation flow
- Results stay focused on current section until user clicks Next

--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
               <span class="title-subtext">based on proven consolidation results with Sweet.</span>
             </div>
             <div class="estimated-value" id="consolidationEstimate">$0</div>
-            <button class="cta-button precision-cta" onclick="openPreciseEstimate()">Want a more precise estimation?</button>
+            <div style="display: flex; gap: 12px; justify-content: center; margin-top: 20px;">
+              <button class="cta-button precision-cta" onclick="openPreciseEstimate()">Want a more precise estimation?</button>
+              <button class="next-section-btn" onclick="toggleSection('mttr')">Continue to MTTR Calculator →</button>
+            </div>
           </div>
         </div>
       </div>
@@ -226,7 +229,10 @@
             </div>
             <div id="mttrCalculationSteps" style="margin: 16px 0; padding: 14px; background: #f9f9f9; border-radius: 10px; text-align: center;"></div>
             <div class="estimated-value" id="mttrEstimateValue">$0</div>
-            <button class="cta-button precision-cta" onclick="openPreciseEstimate()">Want a more precise estimation?</button>
+            <div style="display: flex; gap: 12px; justify-content: center; margin-top: 20px;">
+              <button class="cta-button precision-cta" onclick="openPreciseEstimate()">Want a more precise estimation?</button>
+              <button class="next-section-btn" onclick="toggleSection('vuln')">Continue to Vulnerability ROI →</button>
+            </div>
           </div>
         </div>
       </div>
