Make Next button smaller, more elegant, and right-aligned
- Next button now subtle and minimal (transparent bg, muted color)
- Much smaller size: 8px padding, 13px font (vs 14px padding, 14px font)
- Right-aligned for better visual hierarchy
- Primary CTA stays centered and prominent
- Hover: subtle gray background + slides right
- Changed text to 'Next: [Calculator] →' for brevity

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
               <span class="title-subtext">based on proven consolidation results with Sweet.</span>
             </div>
             <div class="estimated-value" id="consolidationEstimate">$0</div>
-            <div style="display: flex; gap: 12px; justify-content: center; margin-top: 20px;">
-              <button class="cta-button precision-cta" onclick="openPreciseEstimate()">Want a more precise estimation?</button>
-              <button class="next-section-btn" onclick="toggleSection('mttr')">Continue to MTTR Calculator →</button>
+            <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Want a more precise estimation?</button>
+            <div style="text-align: right; margin-top: 12px;">
+              <button class="next-section-btn" onclick="toggleSection('mttr')">Next: MTTR Calculator →</button>
             </div>
           </div>
         </div>
@@ -229,9 +229,9 @@
             </div>
             <div id="mttrCalculationSteps" style="margin: 16px 0; padding: 14px; background: #f9f9f9; border-radius: 10px; text-align: center;"></div>
             <div class="estimated-value" id="mttrEstimateValue">$0</div>
-            <div style="display: flex; gap: 12px; justify-content: center; margin-top: 20px;">
-              <button class="cta-button precision-cta" onclick="openPreciseEstimate()">Want a more precise estimation?</button>
-              <button class="next-section-btn" onclick="toggleSection('vuln')">Continue to Vulnerability ROI →</button>
+            <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Want a more precise estimation?</button>
+            <div style="text-align: right; margin-top: 12px;">
+              <button class="next-section-btn" onclick="toggleSection('vuln')">Next: Vulnerability ROI →</button>
             </div>
           </div>
         </div>
