Remove placeholder text, add subtle shadows to input boxes
- Remove 'e.g., 500' placeholder - cleaner look
- Add subtle outer shadow (0 1px 3px) for depth
- Add inner shadow (inset 0 1px 2px) for recessed effect
- Enhance shadows on hover for better interaction feedback
- Input boxes now more visible and tactile

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         
           <!-- Main Workloads Input -->
           <div class="input-group">
-            <label class="input-label">Number of workloads in your organization</label>
+            <label class="input-label">How many workloads are in your organization?</label>
             <div class="helper-text">Count all containers, VMs, serverless functions, and other cloud resources.</div>
-            <input type="number" id="workloads" class="input" placeholder="e.g., 500" min="1">
+            <input type="number" id="workloads" class="input" min="1">
           </div>
           
           <!-- Collapsible Additional Details -->
