Simplify MTTR calculation display to compact 2-line explanation
Replace large visual breakdown with single sentence:
- 'Reducing MTTR from 3 hours to 5 minutes across X incidents saves Y hours @ $Z/hr'
- 14px font (subtle, not dominant)
- Bold key numbers (3h→5min, incidents, hours saved)
- Neon green for hours saved
- 2 lines max, wraps naturally
- No background box, minimal space
- Focus stays on main dollar value above

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
               <span class="title-emphasis">Estimated savings</span>
               <span class="title-subtext">from reducing incident resolution time.</span>
             </div>
-            <div id="mttrCalculationSteps" style="margin: 16px 0; padding: 14px; background: #f9f9f9; border-radius: 10px; text-align: center;"></div>
+            <div id="mttrCalculationSteps" style="margin: 12px 0;"></div>
             <div class="estimated-value" id="mttrEstimateValue">$0</div>
             <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Want a more precise estimation?</button>
             <div style="text-align: right; margin-top: 12px;">
